infrastructure/platform/base/zot/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry
  labels:
    internal-services: "true"
