infrastructure/platform/base/zot/httproute-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zot-private
  namespace: registry
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "registry.${domain_wahoo_li:=wahoo.li}"
  - "registry.${domain_absolutist_it:=absolutist.it}"
  rules:
  - backendRefs:
    - name: zot
      port: 5000
